src/test/resources/type/good/append-5.ml
func test() {
    return [[1,2],[1,2]]
}

z = test()[0].append(1)