src/test/resources/type/bad/append-5.ml
x = [[1,2], [3,4]]
y = x[0][0].append(1)